# eclipse-cdt-bug

./: CMakeLists.txt  README.md  toolchain.cmake
hello_world/: CMakeLists.txt  main.cpp
libs/settings/: CMakeLists.txt  name.cpp
libs/settings/Include/settings/: name.hpp
libs/verifier/: CMakeLists.txt  name.cpp
libs/verifier/Include/verifier/: name.hpp
